# Notebooks

./: .gitignore  README.md
C++/kNearestNeighbor/: CMakeLists.txt  requirements.txt
C++/kNearestNeighbor/include/: BoundedVector.hpp  CompleteBinaryTree.hpp  Globals.hpp  NearestNeighbor.hpp  Vector.hpp  WavefrontObject.hpp
C++/kNearestNeighbor/src/: BoundedVector.cpp  CMakeLists.txt  CompleteBinaryTree.cpp  Globals.cpp  KNNSearch.cpp  NNSearch.cpp  NearestNeighbor.cpp  WavefrontObject.cpp  kNearestNeighbor.cpp
C++/kNearestNeighbor/test/: KNN_Unit_Test.cpp
C++/kNearestNeighbor/test/data/: alexlim_generatePointCloud_v01.hipnc
Mathematica/: AnimTangentNormal.nb  ContourPlotWithOverlay.nb  LagrangeMultiplier.nb  Nroot_of_unity.nb  PointwiseUnifConvergence.nb  Zp_Generator.nb
Mathematica/PDE/: FSRepresentation-001.nb  FourierSeries-001.nb  M112B-HW2-Vis.nb  PeriodicExtension-001.nb  SimpleWave-001.nb  WaveFourier-002.nb
Python/data_structures/: README.md
Python/data_structures/maps_and_sets/: ADT_HashMaps.py  ADT_ListMaps.py  ADT_UnsortedListMaps.py  test_ChainHashMap.py  test_UnsortedMaps.py
Python/data_structures/maps_and_sets/abstract_base/: HashMaps.py  Maps.py
Python/data_structures/miscellaneous/: SkipList.py  test_SkipList.py
Python/data_structures/simple_tree/: ADT_LinkedBinaryTree.py  LinkedBinaryTree.py  __init__.py  tests.py
Python/data_structures/stack_and_queue/: ADT_ArrayBinaryTree.py  ADT_Deque.py  ADT_PriorityQueue.py  ADT_Queue.py  ADT_Stack.py  HeapSort.py  test_Deque.py  test_PriorityQueue.py  test_Queue.py  test_Stack.py  tests.py
(+9 files in other folders)
